Update jgss usage demo and sasl demo